--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,6 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Hello Coursera!</h1>
-<h2>Babs, can you see this?  I love you!</h2>
+<h1>Babs, if you can see this, just know I love you so much.</h1>
 </body>
 </html>
